# programming-competition

./: LICENSE
reference_answer/avg_c/: CMakeLists.txt  file.c  file.h  main.c  time.c  time.h
reference_answer/avg_go/: go.mod  main.go
reference_answer/avg_kn/: build.gradle  gradle.properties  settings.gradle
reference_answer/avg_kn/src/nativeMain/kotlin/: Common.kt  File.kt  Main.kt  Time.kt
reference_answer/avg_rust/: Cargo.toml
reference_answer/avg_rust/src/: main.rs
