[package]
name = "avg_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5.6"
chrono="0.4.22"

[profile.release]
opt-level = "z"
lto = "thin"
